--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 </div>
                 <div class="button-content">
                     <h3 class="button-title">Lecciones</h3>
-                    <p class="button-description">Animaciones y elementos interativos para explorar los contenidos del curso.</p>
+                    <p class="button-description">Animaciones y elementos interactivos para explorar los contenidos del curso.</p>
                 </div>
             </a>
 
@@ -176,6 +176,16 @@
                 <div class="button-content">
                     <h3 class="button-title">EVA</h3>
                     <p class="button-description">Accede al Entorno Virtual de Aprendizaje para materiales adicionales e información del curso.</p>
+                </div>
+            </a>
+
+            <a href="https://youtube.com" class="button-card" target="_blank">
+                <div class="button-image">
+                    <img src="img/videos.png" alt="Videos" width="50" height="50">
+                </div>
+                <div class="button-content">
+                    <h3 class="button-title">Videos</h3>
+                    <p class="button-description">Lista de reproducción de YouTube con videos expositivos sobre los contenidos del curso.</p>
                 </div>
             </a>
         </div>
