--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 </div>
             </a>
 
-            <a href="https://youtube.com" class="button-card" target="_blank">
+            <a href="https://www.youtube.com/watch?v=t2dJANyC0Hw&list=PLQRHe0Sf8EkzrzYeffIc98YYxWol8NNAx" class="button-card" target="_blank">
                 <div class="button-image">
                     <img src="img/videos.png" alt="Videos" width="50" height="50">
                 </div>
